a2/stage/tests/reject/wSt_3.1.6_invalid.ul
void main() {
    float b;
    b = a;
}
